--- a/src/Components/CartItems/cartItems.css
+++ b/src/Components/CartItems/cartItems.css
@@ -78,7 +78,7 @@
 }
 
 .cartitems-promocode {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   flex: 1;
   font-size: 16px;
   font-weight: 500;
@@ -98,4 +98,19 @@
 
 .cartitems-promobox input {
   border: 2px solid gold;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 16px;
+  width: 330px;
+  height: 50px;
+}
+
+.cartitems-promobox button {
+  width: 170px;
+  height: 58px;
+  font-size: 16px;
+  background: black;
+  color: white;
+  cursor: pointer;
 }
