--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -4,6 +4,10 @@
   justify-content: space-around;
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #eee;
 }
 
 .nav-logo {
